--- a/app/src/main/res/menu/menu_ticket_ai.xml
+++ b/app/src/main/res/menu/menu_ticket_ai.xml
@@ -5,5 +5,6 @@
         android:id="@+id/action_reset_stats"
         android:title="@string/reiniciar"
         android:orderInCategory="100"
+        android:icon="@drawable/ic_ai"
         app:showAsAction="never"/>
 </menu>
